# dent8

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  compose.yml  demo.tape
.github/workflows/: ci.yml
crates/dent8-cli/: Cargo.toml
crates/dent8-cli/src/: identity.rs  main.rs  mcp.rs  mcp_config.rs  witness.rs
crates/dent8-cli/tests/: agent_hook_examples.rs  agent_integrations.rs  agent_profile_examples.rs  cli_usage.rs
crates/dent8-core/: Cargo.toml
crates/dent8-core/src/: anchor.rs  hash.rs  ids.rs  lib.rs  model.rs  policy.rs  state.rs
crates/dent8-core/tests/: golden_replay.rs  proptest_fold.proptest-regressions  proptest_fold.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  proptest_robustness.rs
crates/dent8-core/tests/golden/replay/: asserted_then_reinforced.events.jsonl  asserted_then_reinforced.expected.json  contested_then_unresolved.events.jsonl  contested_then_unresolved.expected.json  corroborated_by_three_sources.events.jsonl  corroborated_by_three_sources.expected.json  expired_after_ttl.events.jsonl  expired_after_ttl.expected.json  retracted_by_owner.events.jsonl  retracted_by_owner.expected.json  retrieved_after_terminal.events.jsonl  retrieved_after_terminal.expected.json  superseded_by_equal_authority.events.jsonl  superseded_by_equal_authority.expected.json
crates/dent8-evals/: Cargo.toml
crates/dent8-evals/src/: lib.rs
crates/dent8-export/: Cargo.toml
crates/dent8-export/src/: lib.rs
crates/dent8-store/: Cargo.toml
crates/dent8-store-postgres/: Cargo.toml
crates/dent8-store-postgres/src/: adapter.rs  lib.rs
crates/dent8-store-sqlite/: Cargo.toml
crates/dent8-store-sqlite/src/: lib.rs
crates/dent8-store/src/: firewall.rs  lib.rs  memory.rs  registry.rs
crates/dent8-store/tests/: evals_corpus.rs  robustness.rs
docs/: STATUS.md  agent-adapters.md  architecture.md  belief-revision.md  configuration.md  domain-model.md  evals.md  formal-verification.md  interfaces.md  naming.md  project-brief.md  related-work.md  roadmap.md  storage.md  threat-model.md  witness.md
docs/decisions/: 0001-postgres-first.md  0002-claim-events-not-memory-items.md  0003-mcp-as-adapter.md  0004-canonicalization-and-hash-chain.md  0005-belief-base-revision-semantics.md  0006-formal-verification-stack.md  0007-authority-as-entrenchment.md  0008-retraction-authority.md  0009-uniqueness-and-contestation.md  0010-evidence-edges-and-retraction-taint.md  0011-authority-gated-expiration.md  0012-signed-source-identity.md  0013-signed-write-attestation.md
docs/paper/: outline.md  preprint.md
docs/research/: dossier.md  novelty.md  training-substrate.md
evals/: README.md
evals/fixtures/: beginner_to_senior.events.jsonl  consistency_required.events.jsonl  low_authority_injection.events.jsonl  summary_drift.events.jsonl  ttl_expiry.events.jsonl
evals/replay/: beginner_to_senior.expected.json  consistency_required.expected.json  low_authority_injection.expected.json  summary_drift.expected.json  ttl_expiry.expected.json
examples/agent-hooks/: README.md
examples/agent-hooks/cascade/: hooks.sample.json
examples/agent-hooks/claude-code/: settings.sample.json
examples/agent-hooks/codex/: hooks.sample.json
examples/agent-hooks/cursor/: README.md
examples/agent-hooks/gemini/: settings.sample.json
examples/agent-hooks/grok-build/: README.md
examples/agent-hooks/hecate/: README.md
examples/cascade/: README.md  mcp_config.sample.json
examples/claude-code/: README.md  mcp.sample.json
examples/codex/: README.md  config.sample.toml
examples/cursor/: README.md  mcp.sample.json
examples/duckdb/: README.md  demo.sh
examples/firewall/: demo.sh
examples/gemini/: README.md  settings.sample.json
examples/grok-build/: README.md  mcp.sample.json
examples/hecate/: README.md  task-with-dent8.sample.json
examples/langchain/: README.md  dent8_memory_agent.py  dent8_memory_agent.ts
examples/mcp/: README.md  demo.sh
examples/vercel-ai-sdk/: README.md  dent8_memory_agent.ts
examples/witness/: README.md  demo.sh
migrations/postgres/: 001_initial.sql  002_event_log.sql  003_materialization.sql
