[workspace]
members = [
    "crates/dent8-cli",
    "crates/dent8-core",
    "crates/dent8-evals",
    "crates/dent8-export",
    "crates/dent8-store",
    "crates/dent8-store-postgres",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/xyzzylabs/dent8"
rust-version = "1.95"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
# `kani` is set by the Kani verifier (`cargo kani`); the #[cfg(kani)] proof harness
# in dent8-core is excluded from normal builds. Register it so the lint stays quiet.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

