[package]
name = "dent8-cli"
description = "Command-line interface for dent8."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "dent8"
path = "src/main.rs"

[dependencies]
dent8-core = { path = "../dent8-core" }
dent8-store = { path = "../dent8-store" }
dent8-store-postgres = { path = "../dent8-store-postgres" }
serde_json = "1"

[lints]
workspace = true

