[package]
name = "dent8-cli"
description = "Command-line interface for dent8."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "dent8"
path = "src/main.rs"

[dependencies]
dent8-core = { path = "../dent8-core" }
dent8-store = { path = "../dent8-store" }
dent8-store-postgres = { path = "../dent8-store-postgres" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Opt-in: lets the CLI/MCP run against Postgres (DENT8_DATABASE_URL). Off by default so the
# stock `dent8` binary stays free of the async sqlx stack and uses the file dev store.
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }

[features]
postgres = ["dent8-store-postgres/adapter", "dep:tokio"]

[lints]
workspace = true

