[package]
name = "dent8-cli"
description = "Command-line interface for dent8."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "dent8"
path = "src/main.rs"

[dependencies]
dent8-core = { path = "../dent8-core" }
dent8-store = { path = "../dent8-store" }
dent8-store-postgres = { path = "../dent8-store-postgres" }
# Opt-in: the embedded SQLite backend (sqlx + bundled libsqlite3), selected by a sqlite:// URL.
dent8-store-sqlite = { path = "../dent8-store-sqlite", optional = true }
# Pure logic over core/store (no extra heavy deps) — powers the self-demonstrating
# `dent8 eval` benchmark.
dent8-evals = { path = "../dent8-evals" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Opt-in (via the `postgres` backend / the `async-store` umbrella): the tokio bridge that
# lets the CLI/MCP run against an async backend selected by DENT8_STORE_URL. Off by default so
# the stock `dent8` binary stays free of the async sqlx stack and uses the file dev store.
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }
# Opt-in: Ed25519 source identity and witness commands. Off by default so the stock binary
# keeps the symmetric anchor and pulls no signature stack.
ed25519-dalek = { version = "2", optional = true }
getrandom = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
# Opt-in: the `dent8 export` analytical lane (Parquet for DuckDB). Off by default so the stock
# binary stays free of the arrow/parquet columnar stack.
dent8-export = { path = "../dent8-export", optional = true }

[features]
# Umbrella enabled by every async backend: it brings in the `AsyncEventStore` trait + the
# tokio bridge, so the generic `connect_backend`/`backend_*` facade compiles. A backend
# feature (e.g. `postgres`) turns it on; selection is by URL scheme at runtime.
async-store = ["dent8-store/async-store", "dep:tokio"]
postgres = ["dent8-store-postgres/adapter", "async-store"]
sqlite = ["dep:dent8-store-sqlite", "async-store"]
identity = ["dep:ed25519-dalek", "dep:getrandom", "dep:hex"]
witness = ["dent8-core/signed-anchor", "dep:ed25519-dalek", "dep:getrandom", "dep:hex"]
export = ["dep:dent8-export"]

[lints]
workspace = true
