[package]
name = "dent8-store"
description = "Storage and replay boundaries for dent8 claim events."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "dent8_store"
path = "src/lib.rs"

[dependencies]
dent8-core = { path = "../dent8-core" }
# Opt-in: the `AsyncEventStore` trait for async (network/embedded-sqlx) backends. Boxed via
# `async-trait` so the CLI can hold a `Box<dyn AsyncEventStore>` selected at runtime. Off by
# default so the sync file/in-memory store pulls no async machinery.
async-trait = { version = "0.1", optional = true }

[features]
async-store = ["dep:async-trait"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

